--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "zustand": "5.0.0-rc.2"
   },
   "devDependencies": {
