--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "sharp": "^0.33.5",
     "zustand": "5.0.0-rc.2"
   },
   "devDependencies": {
