--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "sharp": "^0.33.5",
+    "react-intersection-observer": "^9.13.1",
     "zustand": "5.0.0-rc.2"
   },
   "devDependencies": {
